Implementing TestCases endpoints
