# src/controllers/TestCaseController.ts
@@ -1,0 +1,43 @@
+
+import express from 'express'
+import { getTestCaseById, insertTestCase, listTestCases } from '../services/testCaseService'
+import { TestCaseInsertion } from '../interfaces/testCaseInterfaces'
+import { NotFoundError } from '../shared/errors'
+
+export async function fetchingTestCaseById(req: express.Request, res: express.Response, next: express.NextFunction) {
+    const id = req.params.testCaseId
+
+    try {
+        const testCase = await getTestCaseById(id)
+        res.status(200).send(testCase)
+    } catch (err: unknown) {
+        console.log(err)
+        if(err instanceof NotFoundError) {
+            res.status(err.status).send({ msg: err.message })
+        } else {
+            res.status(500).send()
+        }
+    }    
+}
+
+export async function creatingTestCase(req: express.Request, res: express.Response) {
+    const testSuiteId = req.params.testSuiteId    
+    // TODO: add validation
+    const testCaseInfo: TestCaseInsertion = req.body
+    try {
+        const testCase = await insertTestCase(testSuiteId, testCaseInfo)
+        res.status(201).send(testCase)
+    } catch (err: unknown) {
+        res.status(400).send({ error: 'Error while creating test case.' })
+    }
+}
+
+export async function listingTestCases(req: express.Request, res: express.Response) {
+
+    try {   
+        const testCases = await listTestCases()
+        res.status(200).send(testCases)
+    } catch (err: unknown) {
+        res.status(500).send({ error: 'Server Error' })
+    }
+}
